Starter Theme Without Sass

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
-	Theme Name: Gregs HTML5 Starter
+	Theme Name: Starter Sass for Genesis
 	Description: My starter theme created for the Genesis Framework - Rocking HTML5.
-	Author: Greg Reindel
-	Author URI: http://www.gregreindel.com/
+	Author: Dana Werpny
+	Author URI: http://www.danawerpny.com/
 
-	Version: 1.0
+	Version: 2.0
 
-	Tags: html5, blank, white, one-column, two-columns, three-columns, fixed-width, custom-menu, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready
+	Tags: html5, blank, white, one-column, two-columns, three-columns, fixed-width, custom-menu, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, sass, genesis, starter-sass
 
     Template: genesis
-    Template Version: 2.0.0-beta1
+    Template Version: 3.0
 
 	License: GPL-2.0+
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
