--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,13 +1,97 @@
-#header {
-	height: 200px;
+/*
+Site Header
+---------------------------------------------------------------------------------------------------- */
+
+.site-header {
+	padding: 20px 0;
+	padding: 1.25rem 0;
 }
 
-/* SITE TITLE/LOGO */
+.header-image .site-header {
+	padding: 0;
+}
 
-h1#title {
+/* Title Area
+--------------------------------------------- */
+
+.title-area {
+	font-family: 'Georgia', 'Serif';
+	font-weight: 700;
+	float: left;
+	padding: 0;
+	width: 360px;
 	text-align: center;
-	 a {
-  	font-family: georgia;
-  	color: #FF6699;
-  }
+	padding: 50px 0;
+}
+
+.site-title {
+	font-size: 28px;
+	font-size: 2.8rem;
+	letter-spacing: 2px;
+	letter-spacing: 0.2rem;
+	line-height: 1;
+	margin: 0 0 8px;
+	margin: 0 0 0.8rem;
+	text-transform: uppercase;
+	a {
+		color: #FF6699;
+		&:hover {
+			color: #666;
+		}
+	}
+}
+
+.site-title a,
+.site-title a:hover {
+	color: #333;
+}
+
+.site-description {
+	color: #999;
+	font-size: 16px;
+	font-size: 1.6rem;
+	font-weight: 300;
+	line-height: 1;
+	margin: 0;
+}
+
+/* Full width header, no widgets */
+
+.header-full-width .title-area,
+.header-full-width .site-title {
+	width: 100%;
+}
+
+.header-image .site-description,
+.header-image .site-title a {
+	display: block;
+	text-indent: -9999px;
+}
+
+/* Logo, hide text */
+
+.header-image .title-area {
+	padding: 0;
+}
+
+.header-image .site-title a {
+	float: left;
+	min-height: 164px;
+	width: 100%;
+}
+
+
+/* Widget Area
+--------------------------------------------- */
+
+.site-header .widget-area {
+	float: right;
+	text-align: right;
+	width: 740px;
+}
+
+.site-header .search-form {
+	float: right;
+	margin-top: 24px;
+	margin-top: 2.4rem;
 }
