--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,8 +7,27 @@ Author: Dana
 Author URI: http://danawerpny.com
 */
 
+/* ---------- START VARIABLES ---------- */
+
+/* COLORS - BASE */
+$color-primary: #FF6699;
+$color-secondary: #21C6BB;
+
+/* COLORS - NEUTRALS */
+$grey-light: #EEE;
+$grey-med: #666;
+$grey-dark: #444;
+$white: #FFF;
+
+/* FONTS */
+$font-primary: 'Raleway', 'Sans-serif';
+
+/* ---------- END VARIABLES ---------- */
+
 /* TYPE STYLES */
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic,900,900italic);
+
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700);
 
 /* NORMALIZE & HTML 5 RESET */
 @import "_normalize.scss";
@@ -59,6 +78,3 @@ Author URI: http://danawerpny.com
 
 /* MEDIA QUERIES */
 @import "_mq.scss";
-
-/* SASS VARIABLES */
-@import "_var.scss";
