--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,11 @@
-/*
-Theme Name: Dana Werpny - Personal Portfolio
-Theme URI: http://danawerpny.com
-Description: The personal portfolio of Dana Werpny - a front-end developer from Toronto, Canada
+/*!
+Theme Name: Starter Sass
+Theme URI: https://github.com/danaw/starter-sass
+Description: Starter Theme for the Genesis Framework which integrates WooCommerce and can be coded in Sass.
 Version: 1.0
 Author: Dana
 Author URI: http://danawerpny.com
+Template: Genesis
 */
 
 /* ---------- START VARIABLES ---------- */
