--- a/scss/_mq.scss
+++ b/scss/_mq.scss
@@ -198,6 +198,9 @@ nav {
 .menu-toggle {
 	display: none;
 	visibility: hidden;
+	&:focus {
+		outline: none;
+	}
 }
 
 /* Navigation toggles - Ensure Menu Displays when Scaled Up
@@ -235,11 +238,6 @@ nav {
 		color: #999;
 	}
 
-	button.menu-toggle:focus,
-	button.sub-menu-toggle:focus {
-		outline: none;
-	}
-
 	.sub-menu-toggle {
 		padding: 18px;
 		padding: 1.8rem;
@@ -248,13 +246,22 @@ nav {
 		top: 0;
 	}
 
+	.menu-toggle {
+		// font-size: 42px;
+		margin: 0 auto;
+		padding: 10px;
+	}
+
 	.menu-toggle:before {
 		content: "\2261";
-		font-size: 30px;
+		font-size: 42px;
 	}
 
 	.menu-toggle.activated:before {
-		content: "\2191";
+		// content: "\2191";
+		content: "\2261";
+		// font-size: 28px;
+		color: #CCC;
 	}
 
 	.sub-menu-toggle:before {
@@ -271,7 +278,7 @@ nav {
 	}
 
 	.genesis-nav-menu .menu-item {
-		background-color: #f5f5f5;
+		background-color: $color-primary;
 		display: block;
 		position: relative;
 		text-align: left;
@@ -300,12 +307,12 @@ nav {
 	}
 
 	.genesis-nav-menu .sub-menu .sub-menu a {
-		background-color: #f5f5f5;
+		background-color: $color-primary;
 		padding-left: 30px;
 	}
 
 	.genesis-nav-menu .sub-menu .sub-menu .sub-menu a {
-		background-color: #fff;
+		background-color: #FFF;
 		padding-left: 40px;
 	}
 
@@ -313,9 +320,5 @@ nav {
 	.nav-primary .current-menu-item > a {
 		color: #333;
 	}
-
-  .nav-primary {
-  	display: block;
-  }
 
 }
