Border on navigation menu

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -68,8 +68,7 @@ Site Navigation
 	width: 200px;
 }
 
-.genesis-nav-menu a,
-.genesis-nav-menu .sub-menu ul li a {
+.sub-menu ul li a {
 	border-bottom: 1px solid #FFF;
 }
 
