--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ Template: Genesis
 /* ---------- START VARIABLES ---------- */
 
 /* COLORS - BASE */
-$color-primary: lavenderblush;
+$color-primary: #333;
 $color-secondary: #21C6BB;
 
 /* COLORS - NEUTRALS */
