--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -14,6 +14,10 @@ Content Area
 	padding: 4rem 4rem 2.4rem;
 }
 
+.entry-title {
+	font-weight: 600;
+}
+
 .entry-content a {
 	border-bottom: 1px solid #ddd;
 	color: #1d4eb0;
