--- a/scss/_mq.scss
+++ b/scss/_mq.scss
@@ -218,6 +218,14 @@ nav {
 
 @media only screen and (max-width: 767px) {
 
+.genesis-nav-menu .sub-menu a {
+	border-bottom: 1px solid $color-primary;
+}
+
+.sub-menu ul li a {
+	border-bottom: 1px solid #FFF;
+}
+
 	.menu-toggle,
 	.sub-menu-toggle {
 		display: block;
