--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,8 +11,8 @@ Template: Genesis
 /* ---------- START VARIABLES ---------- */
 
 /* COLORS - BASE */
-$color-primary: #333;
-$color-secondary: #21C6BB;
+$color-primary: #FF6699;
+$color-secondary: lavenderblush;
 
 /* COLORS - NEUTRALS */
 $grey-light: #EEE;
