--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -177,3 +177,11 @@ Site Navigation
 	display: none;
 }
 
+#menu-item-266,
+#menu-item-264 {
+	.fontawesome-text {
+		display: inline-block;
+		padding-left: 5px;
+	}
+}
+
