--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -63,7 +63,7 @@ Home Widgets
 // Featured Products
 
 .woocommerce ul.cart_list li, .woocommerce ul.product_list_widget li, .woocommerce-page ul.cart_list li, .woocommerce-page ul.product_list_widget li {
-	float: left;
+	display: inline-block;
 	margin-right: 4%;
 	&:last-child {
 		margin-right: 0;
